<resources>
    <string name="app_name">HockeyClubMaster</string>

    <!--Main activity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--Login activity-->
    <string name="IniciarSesionTXT">Iniciar Sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="BtnLogeo">Entrar</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo electrónico</string>
    <string name="ContaseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>

    <!--Menu principal-->

    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="NombresPrincipal">--</string>
    <string name="CorreoPrincipal">--</string>
    <string name="UidPrincipal">--</string>
    <string name="EstadoCuentaPrincipal">No verificado</string>

    <string name="AgregarNotas">Agregar Convocatorias</string>
    <string name="ListarNotas">Mis Convocatorias</string>
    <string name="Importantes">Importantes</string>
    <string name="Contactos">Equipo</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="CerrarSesion">Salir</string>


    <!--AGREGAR NOTA-->

    <string name="Uid_Usuario">Uid del Usuario</string>
    <string name="Correo_usuario">Correo del Usuario</string>
    <string name="Fecha_hora_actual_TXT">Fecha de registro</string>
    <string name="Titulo">Titulo</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">No finalizado</string>

    <!--MENÚ-->
    <string name="Agregar_Nota_BD">Agregar</string>
    <string name="Actualizar_Nota_BD">Actualizar</string>
    <string name="Perfil_usuario">Perfil del usuario</string>
    <string name="Configuracion">Configuracionf</string>
    <string name="Actualizar_pass">Actualizar pass</string>
    <string name="Agregar_contacto">Agregar contacto</string>
    <string name="Buscar_Contactos">Buscar contactos</string>
    <string name="Filtar_Notas">Filtrar</string>

    <!--ITEM NOTA-->
    <string name="Id_nota_Item">Id Convocatoria</string>
    <string name="Uid_Usuario_Item">Uid del Usuario</string>
    <string name="Correo_usuario_Item">Correo del Usuario</string>
    <string name="Titulo_Item">Titulo</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Fecha_Item">00/00/0000</string>
    <string name="Estado_Item">No finalizado</string>

    <!--ITEM CONTACTO-->
    <string name="Id_c_Item"> Id contacto</string>
    <string name="Uid_c_Item"> Uid usuario</string>
    <string name="nombres_c_Item">Nombres</string>
    <string name="apellidos_c_Item">Apellidos</string>
    <string name="correo_c_Item">Correo</string>
    <string name="telefono_c_Item">Teléfono</string>
    <string name="edad_c_Item">Edad</string>
    <string name="direccion_c_Item">Dirección</string>


    <!--ITEM NOTA IMPORTANTE-->
    <string name="Id_nota_Item_I">Id Convocatoria</string>
    <string name="Uid_Usuario_Item_I">Uid del Usuario</string>
    <string name="Correo_usuario_Item_I">Correo del Usuario</string>
    <string name="Titulo_Item_I">Titulo</string>
    <string name="Fecha_hora_registro_Item_I">Fecha y hora registro</string>
    <string name="Descripcion_Item_I">Descripcion</string>
    <string name="Fecha_Item_I">00/00/0000</string>
    <string name="Estado_Item_I">No finalizado</string>

    <!--CUADRO DE DIALOGO OPCIONES-->

    <string name="ElijaOpcionTXT">Elija una opción</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <!--CUADRO DE DIALOGO CUENTA VERIFICADA-->
    <string name="CuentaVerificadaTXT">Cuenta verificada</string>
    <string name="EntendidoVerificado">Entendido</string>

    <!--CUADRO DE DIALOGO CUENTA VERIFICADA-->
    <string name="ElegirImagenTXT">Elegir imagen de:</string>
    <string name="Btn_Elegir_Galeria">Galería</string>
    <string name="Btn_Elegir_Camara">Cámara</string>

    <!--CUADRO DE DIALOGO VALIDAR REGISTRO DE JUGADOR DE EQUIPO (CONTACTO)-->
    <string name="ValidarTXT">Por favor complete al menos un campo nombre del contacto </string>
    <string name="Btn_Validar_Registro_C">Entendido</string>

    <!--CUADRO DE DIALOGO ELIMINAR NOTA IMPORTANTE-->
    <string name="EliminarNotaImportanteTXT">¿Desea eliminar esta convocatoria favorita de la lista?</string>
    <string name="EliminarNota">Eliminar</string>
    <string name="EliminarNotaCancelar">Cancelar</string>

    <!--CUADRO DE DIALOGO OPCIONES PARA EL CONTACTO-->
    <string name="ElegirOpcionContactoTXT">Seleccione una opción</string>
    <string name="Btn_Eliminar_C">Eliminar</string>
    <string name="Btn_Actualizar_C">Actualizar</string>

    <!--CUADRO DE DIALOGO FILTRAR NOTAS-->
    <string name="FiltroTXT">Filtrar notas:</string>
    <string name="Todas_notas">Todas</string>
    <string name="Notas_Finalizadas">Finalizadas</string>
    <string name="Notas_No_Finalizadas">No Finalizadas</string>

    <!--CUADRO DE DIÁLOGO - AUTENTICACIÓN-->
    <string name="ImportanteTXT_Aut">Lea con atención</string>
    <string name="MensajeTXT_Aut">Para realizar la eliminación de su cuenta, tendrá que cerrar sesión, luego logearse, y en un plazo de 5 minutos podrá eliminar su cuenta de nuestra aplicación, una vez pasado ese tiempo, tendrá que realizar nuevamente los pasos mencionados. </string>
    <string name="Btn_Entendido_Aut">Entendido</string>
    <string name="Btn_Cerrar_Sesion_Aut">Cerrar sesión</string>

    <!--ACTUALIZAR NOTA-->
    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A">Uid del Usuario</string>
    <string name="Correo_usuario_A">Correo del Usuario</string>
    <string name="Titulo_A">Titulo</string>
    <string name="Fecha_registro_A">Fecha de Registro</string>
    <string name="Descripcion_A">Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A">00/00/0000</string>
    <string name="Estado_A">No finalizado</string>
    <string name="Estado_nuevo">--</string>

    <!--SPINNER-->
    <string-array name="Estados_nota">
        <item>No finalizado</item>
        <item>Finalizado</item>
    </string-array>

    <!--DETALLE NOTA-->
    <string name="Id_nota_Detalle">Id convocatoria</string>
    <string name="Uid_usuario_Detalle">Uid usuario</string>
    <string name="Correo_usuario_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle">Titulo</string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Fecha_Registro_Detalle">Fecha registro</string>
    <string name="Fecha_Nota_Detalle">Fecha nota</string>
    <string name="Estado_Detalle">Estado</string>
    <string name="Boton_Importante">Importante</string>

    <string name="Id_nota_Detalle_TXT">Id de la convocatoria: </string>
    <string name="Uid_usuario_Detalle_TXT">Uid del usuario: </string>
    <string name="Correo_usuario_Detalle_TXT">Correo del usuario: </string>
    <string name="Titulo_Detalle_TXT">Título: </string>
    <string name="Descripcion_Detalle_TXT">Descripción: </string>
    <string name="Fecha_Registro_Detalle_TXT">Fecha de registro: </string>
    <string name="Fecha_Nota_Detalle_TXT">Fecha de la convocatoria: </string>
    <string name="Estado_Detalle_TXT">Estado: </string>

    <!--PERFIL DEL USUARIO-->
    <string name="Uid_Perfil">Uid</string>
    <string name="Nombres_Perfil">Mi nombre</string>
    <string name="Apellidos_Perfil">Mis apellidos</string>
    <string name="Correo_Perfil">Correo</string>
    <string name="Edad_Perfil">Edad</string>
    <string name="Telefono_Perfil">Telefono</string>
    <string name="Domicilio_Perfil">Domicilio</string>
    <string name="Universidad_Perfil">Universidad</string>
    <string name="Profesion_Perfil">Profesion</string>
    <string name="Fecha_Nacimiento_Perfil">Fecha de nac.</string>
    <string name="Guardar_Datos">Guardar datos</string>

    <!--PERFIL DEL USUARIO [IMAGEN DE PERFIL]-->
    <string name="BtnElegirImagenDe">Elegir imagen de perfil</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>

    <!--CAMBIAR PASSWORD-->
    <string name="ActualPassTXT">Contaseña actual:</string>
    <string name="ActualPass"> -- </string>
    <string name="EtActualPass">Contraseña actual</string>
    <string name="EtNuevoPass">Nueva contraseña</string>
    <string name="EtRNuevoPass">Nueva contraseña</string>
    <string name="BtnActualizarPass">Actualizar</string>

    <!--AGREGAR CONTACTO-->
    <string name="Uid_Usuario_C">Mi uid</string>
    <string name="Nombres_C">Nombres contacto</string>
    <string name="Apellidos_C">Apellidos contacto</string>
    <string name="Correo_C">Correo electrónico</string>
    <string name="Telefono_C">Teléfono</string>
    <string name="Edad_C">Edad</string>
    <string name="Direccion_C">Dirección</string>
    <string name="Btn_Guardar_Contacto">Guardar contacto</string>

    <!--DETALLE CONTACTO-->
    <string name="DetalleContactoTXT">Detalle del contacto</string>
    <string name="Id_C_D"> -- </string>
    <string name="Uid_Usuario_D"> -- </string>
    <string name="Nombre_C_D"> -- </string>
    <string name="Apellidos_C_D"> -- </string>
    <string name="Correo_C_D"> -- </string>
    <string name="Telefono_C_D"> -- </string>
    <string name="Edad_C_D"> -- </string>
    <string name="Direccion_C_D"> -- </string>
    <string name="Llamar_C">Llamar</string>
    <string name="Mensaje_C">Mensaje</string>

    <!--ACTUALIZAR CONTACTO-->
    <string name="Id_C_A"> -- </string>
    <string name="Uid_C_A"> -- </string>
    <string name="Nombres_C_A"> -- </string>
    <string name="Apellidos_C_A"> -- </string>
    <string name="Correo_C_A"> -- </string>
    <string name="Telefono_C_A"> -- </string>
    <string name="Edad_C_A"> -- </string>
    <string name="Direccion_C_A"> -- </string>
    <string name="Btn_Actualizar_C_A">Actualizar</string>

    <!--INFORMACIÓN DE APLICACIÓN-->
    <string name="Desarrollador">Desarrollado por: Mario Martín y David Rubio</string>
    <string name="CorreoSoporte">Soporte: sophcm@gmail.com</string>
    <string name="Version">Versión: 1.0</string>
    <string name="EntendidoInfo">Entendido</string>

    <!--INFORMACIÓN DE APLICACIÓN-->
    <string name="Uid_Eliminar">Uid del usuario</string>
    <string name="EliminarCuenta">Eliminar cuenta</string>
</resources>