<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarNota.Agregar_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Uid_Usuario"
            android:id="@+id/Uid_Usuario"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Correo_usuario"
            android:id="@+id/Correo_usuario"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Fecha_hora_actual"
            android:id="@+id/Fecha_hora_actual"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/Titulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:hint="@string/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/Descripcion"
            android:textSize="20sp"
            android:fontFamily="@font/worksans"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:hint="@string/Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Btn_Calendario"
                app:icon="@drawable/icono_calendario"
                android:text="@string/Btn_Calendario"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Fecha"
                android:id="@+id/Fecha"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/Estado"
            android:text="@string/Estado"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>