<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarNota.Actualizar_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Id_nota_A"
            android:visibility="gone"
            android:id="@+id/Id_nota_A"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Uid_Usuario_A"
            android:visibility="gone"

            android:id="@+id/Uid_Usuario_A"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Correo_usuario_A"
            android:visibility="gone"

            android:id="@+id/Correo_usuario_A"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Fecha_registro_A"
            android:visibility="gone"
            android:id="@+id/Fecha_registro_A"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Tarea_Finalizada"
                android:layout_width="30dp"
                android:visibility="gone"
                android:layout_height="30dp"
                android:background="#16A085"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Tarea_No_Finalizada"
                android:layout_width="30dp"
                android:visibility="gone"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="#E74C3C"/>
            <TextView
                android:id="@+id/Estado_A"
                android:text="@string/Estado_A"
                android:textSize="20sp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <EditText
            android:id="@+id/Titulo_A"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:hint="@string/Titulo_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/Descripcion_A"
            android:textSize="20sp"
            android:fontFamily="@font/worksans"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:hint="@string/Descripcion_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Btn_Calendario_A"
                app:icon="@drawable/icono_calendario"
                android:text="@string/Btn_Calendario_A"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Fecha_A"
                android:id="@+id/Fecha_A"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/Spinner_Estado"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Estado_nuevo"
                android:text="@string/Estado_nuevo"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>