<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/worksans"
        android:gravity="center"
        android:text="@string/ImportanteTXT_Aut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="autenticacion.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/worksans"
        android:gravity="center"
        android:text="@string/MensajeTXT_Aut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Btn_Entendido_Aut"
        android:text="@string/Btn_Entendido_Aut"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Btn_Cerrar_Sesion_Aut"
        android:text="@string/Btn_Cerrar_Sesion_Aut"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>