<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="0.2dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <!-- icono -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/icono_item_nota_importante" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Id_nota_Item_I"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/Id_nota_Item_I"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Uid_Usuario_Item_I"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/Uid_Usuario_Item_I"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Correo_usuario_Item_I"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/Correo_usuario_Item_I"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Fecha_hora_registro_Item_I"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/Fecha_hora_registro_Item_I"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Titulo_Item_I"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/Titulo_Item_I"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Descripcion_Item_I"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/worksans"
                android:text="@string/Descripcion_Item_I"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Fecha_Item_I"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/Fecha_Item_I"
                android:textSize="18sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Tarea_Finalizada_Item_I"
                    android:layout_width="10dp"
                    android:layout_gravity="center"
                    android:layout_height="10dp"
                    android:background="#16A085"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Tarea_No_Finalizada_Item_I"
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="5dp"
                    android:background="#E74C3C"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/Estado_Item_I"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/worksans"
                    android:text="@string/Estado_Item_I" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>
